 - Look and Feel of the Interface is improved.
 - Server settings form is redesigned.
 - Password field is always empty if open login dialog.
 - If discover Digital Watchdog set default login credentials are being tried.
 - Non-indexed local files (outside media folders) are added in Tree after client restart if a layout that contains such items is opened.
  
 Bugs Fixed:
 - If connect to another EC old cameras were still displayed on Scene. Fixed.
 - Fixed non-sequential port numbers during Linux installation. 
 - If try to delete all storages from a media Server client could hang. Now it is not possible (at least one storage should remain).
 - If rewind back up to the end of archive circles were moving instead of NO DATA. Fixed.
 - If run Media Server after client then client was trying to connect via Media Proxy. Fixed.
 - Fixed incorrect tab behavior in login dialog. 
 - If hold Right mouse Bbutton on Timeline	current selection cleared. Now not.
 - Incorrect total # of licenses displayed in recording schedule form right after a license registration. Fixed.
 - Screen recording were saved as *.av. Now *.avi.
 - If switch off a server and try to seek on the recorded position camera could hang for a long time instead of NO DATA. Fixed.
 - New tree context menu items for layout: Open in New Tab and Open in New Window.
 - If disconnect unauthorized cameras it wasn't possible to delete them because they wasn't swithed to Offline status until the client was restarted. Fixed.
 - Fixed a bub when Media Server could use deleted storages.
 - Fixed artifacts when seeking within screen-recorded video resulted in. 
 - If create a layout for a user it displayed as changed (asterisk) on another computer. Fixed.
 - If change media storage the old one was using. Fixed.
 - >> and >>| buttons are disabled in Live mode.
 
----------------------------------------------- 1.2 -----------------------------------------------

New Cameras and Recorders Supported: