@@ -3,7 +3,7 @@
 COMPANY_NAME=${deb.customization.company.name}
 
 PACKAGENAME=$COMPANY_NAME-mediaserver
-VERSION=${project.version}
+VERSION=${release.version}
 ARCHITECTURE=${os.arch}
 
 TARGET=/opt/$COMPANY_NAME/mediaserver
@@ -14,7 +14,7 @@ INITTARGET=/etc/init
 INITDTARGET=/etc/init.d
 
 STAGEBASE=deb
-STAGE=$STAGEBASE/${PACKAGENAME}-${project.version}.${buildNumber}-${arch}-${build.configuration}
+STAGE=$STAGEBASE/${PACKAGENAME}-${release.version}.${buildNumber}-${arch}-${build.configuration}
 BINSTAGE=$STAGE$BINTARGET
 LIBSTAGE=$STAGE$LIBTARGET
 ETCSTAGE=$STAGE$ETCTARGET
@@ -72,4 +72,4 @@ install -m 644 debian/templates $STAGE/DEBIAN
 
 sudo chown -R root:root $STAGEBASE
 
-(cd $STAGEBASE; sudo dpkg-deb -b ${PACKAGENAME}-${project.version}.${buildNumber}-${arch}-${build.configuration})
+(cd $STAGEBASE; sudo dpkg-deb -b ${PACKAGENAME}-${release.version}.${buildNumber}-${arch}-${build.configuration})
